# ftp-winmount

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES.md  build_exe.py  config.example.ini  ftp_winmount.spec  installer.iss  launcher.py  pyftpdrive.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
.serena/: project.yml
.serena/memories/: ci_workflow_lessons.md  ftp_winmount_progress.md  vscode_ftp_mount_project.md
docs/: ROUTING_MATRIX.md  specs.md
ftp_winmount/: __init__.py  __main__.py  config.py  filesystem.py  ftp_client.py  gdrive_auth.py  gdrive_client.py  gdrive_path_cache.py  remote_client.py  sftp_client.py
pyftpdrive/: __init__.py  __main__.py  cache.py  config.py  filesystem.py  ftp_client.py  logger.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_filesystem.py  test_ftp_client.py  test_gdrive_auth.py  test_gdrive_client.py  test_gdrive_path_cache.py  test_integration.py  test_logger.py  test_memory_leak.py  test_mount_verification.py  test_remote_client.py  test_sftp_client.py
