[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftp-winmount"
version = "0.2.0"
description = "Mount FTP, SFTP, or Google Drive as a local Windows drive"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Daniel T Sasser II"}
]
keywords = ["ftp", "sftp", "ssh", "google-drive", "mount", "windows", "drive", "winfsp", "filesystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "winfspy>=0.8.0; platform_system == 'Windows'",
    "cachetools>=5.0.0",
    "paramiko>=3.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyftpdlib>=1.5.0",
    "psutil>=5.9.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
ftp-winmount = "ftp_winmount.__main__:main"

[project.urls]
Homepage = "https://github.com/dansasser/ftp-winmount"
Documentation = "https://github.com/dansasser/ftp-winmount#readme"
Repository = "https://github.com/dansasser/ftp-winmount.git"
Issues = "https://github.com/dansasser/ftp-winmount/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ftp_winmount*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B904",   # exception chaining - we intentionally translate exceptions
    "B905",   # zip without strict
    "SIM105", # contextlib.suppress - explicit try/except is clearer for cleanup
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["ftp_winmount"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["ftp_winmount"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
